*SVN*

* Console reload! runs to_prepare callbacks also.  #8393 [f.svehla]

* Generated migrations include timestamps by default.  #8501 [Shane Vitarana]

* Drop Action Web Service from rails:freeze:edge.  [Jeremy Kemper]

* Add db:create, drop, reset, charset, and collation tasks.  #8448 [matt]

* Scaffold generator depends on model generator instead of duplicating it.  #7222 [bscofield]

* Scaffold generator tests.  #8443 [pelle]

* Generated scaffold functional tests use assert_difference.  #8421 [norbert]

* Update to Prototype 1.5.1.  [Sam Stephenson]

* Update to script.aculo.us 1.7.1_beta3.  [Thomas Fuchs]

* Generators use *.html.erb view template naming.  #8278 [Tim Pope]

* Updated resource_scaffold and model generators to use short-hand style migrations [DHH]

* Updated initializer to only load #{RAILS_ENV}.rb once. Added deprecation warning for config.breakpoint_server. [Nicholas Seckar]

* Removed breakpointer and Binding.of_caller in favor of relying on ruby-debug by Kent Sibilev since the breakpointer has been broken since Ruby 1.8.4 and will not be coming back [DHH]

  To use the new debugger, start your server with script/server --debugger and insert a call to  'debugger'
  (instead of 'breakpoint') where you want to jump into the debugger. 
  
  BACKWARDS INCOMPATIBILITY NOTE: You must remove the default line 12 from config/environments/development.rb:
  
    config.breakpoint_server = true
  
  This configuration option is no longer available. Rails will fail to start in development mode as long as 
  that's still present.

* Resource scaffolding returns the created entity.to_xml.  [Jeremy Kemper]

* Resource scaffolding responds to new.xml.  #8185 [Eric Mill]

* Include Active Resource in rails:freeze:edge rake task.  [Thomas Fuchs]

* Include Active Resource instead of Action Web Service [DHH] You can add AWS back with this in config/environment.rb:

    config.load_paths += %W( #{RAILS_ROOT}/vendor/rails/actionwebservice/lib )
  